<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">哔哩漫游</string>
    <string name="xposed_description">解锁B站港澳台番剧限制</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="teenagers_mode_dialog_title">关闭青少年模式弹窗</string>
    <string name="teenagers_mode_dialog_summary">仍可从侧滑菜单进入青少年模式</string>
    <string name="cdn_category">加速 CDN 设置</string>
    <string name="hidden_title">启用隐藏功能</string>
    <string name="hidden_summary">打开后可以使用隐藏功能</string>
    <string name="purify_game_title">净化游戏中心</string>
    <string name="purify_game_summary">去除首页右上角游戏中心</string>
    <string name="hidden_group">隐藏功能</string>
    <string name="show_info_summary">显示解锁版权、允许下载等状态信息</string>
    <string name="show_info_title">提示模块运行信息</string>
    <string name="main_category">解锁番剧限制</string>
    <string name="miscellaneous_category">杂项</string>
    <string name="setting_category">设置</string>
    <string name="mini_program_title">去你大爷的小程序</string>
    <string name="mini_program_summary">不再以小程序的方式分享到QQ或者微信（同时复制分享链接变为av号）</string>
    <string name="custom_upos_title">UPOS 服务器设置</string>
    <string name="custom_upos_summary">自定义番剧的 UPOS 服务器，可解决黑屏与无限加载</string>
    <string name="purify_splash_title">净化开屏页面</string>
    <string name="purify_splash_summary">去除启动客户端时的推广</string>
    <string name="beautify_category">美化</string>
    <string name="auto_like_title">自动点赞视频</string>
    <string name="auto_like_summary">进入视频详情页时自动点赞</string>
    <string name="purify_search_title">净化搜索页面</string>
    <string name="purify_search_summary">去除搜索页面的热搜和推荐</string>
    <string name="enable_av_title">显示AV号</string>
    <string name="enable_av_summary">视频详情页显示为AV号</string>
    <string name="custom_download_thread_title">自定义同时缓存数</string>
    <string name="custom_download_thread_summary">自定义最多可以同时下载的视频个数（超过一个需要大会员）</string>
    <string name="save_log_title">保存日志到文件</string>
    <string name="customize_home_tab_title">净化首页标签</string>
    <string name="customize_home_tab_summary">请勿全部选择，会使用之前的的标签</string>
    <string name="test_upos_title">UPOS 服务器测速</string>
    <string name="test_upos_summary">选择最快的 UPOS 服务器以获得最好体验</string>
    <string name="search_area_title">开启其它地区番剧搜索</string>
    <string name="search_area_summary">在搜索页面添加其它地区番剧搜索结果，需要解析服务器支持</string>
    <string name="customize_bottom_bar_title">自定义底栏</string>
    <string name="customize_bottom_bar_summary">至少保留一个元素（重启两次生效）</string>
    <string name="customize_accessKey_title">自定义访问密钥</string>
    <string name="customize_accessKey_summary">自定义发往解析服务器的访问密钥（调试功能，除非明白自己在做什么，否则保持空白）</string>
    <string name="export_video_title">导出视频</string>
    <string name="export_video_summary">只支持默认下载位置</string>
    <string name="customize_home_recommend_title">净化首页推荐内容</string>
    <string name="customize_home_recommend_summary">去除首页推荐页面的指定内容（某些旧版可能无效）</string>
    <string name="pref_backup">备份和还原</string>
    <string name="add_bangumi_title">添加其他地区番剧</string>
    <string name="add_bangumi_summary">在首页标签添加大陆/港澳台番剧分页</string>
    <string name="add_movie_title">添加其他地区影视</string>
    <string name="add_movie_summary">在首页标签添加大陆/港澳台影视分页</string>
    <string name="customize_space_title">净化用户空间</string>
    <string name="customize_space_summary">选择要屏蔽的元素（全选会让你什么也看不到）</string>
    <string name="comment_copy_summary">禁用长按评论/动态/视频简介复制到剪切板（减少误触）</string>
    <string name="comment_copy_title">去除长按复制</string>
    <string name="comment_copy_enhance_title">长按自由复制</string>
    <string name="comment_copy_enhance_summary">长按私信/评论/动态/视频简介时弹出自由选择对话框，需要开启“去除长按复制”</string>
    <string name="copy_comment_title">评论自由复制</string>
    <string name="copy_comment_summary">评论复制按钮可以自由复制</string>
    <string name="revert_live_room_feed_title">强制旧版直播间样式</string>
    <string name="revert_live_room_feed_summary">强制直播间使用旧版样式</string>
    <string name="block_video_ad_title">屏蔽视频下方推荐</string>
    <string name="block_video_ad_summary">屏蔽视频下方推荐栏，开启后会同时屏蔽评论区顶部推广横幅</string>
    <string name="home_filter_title">首页过滤器(推荐和热门)</string>
    <string name="home_filter_summary">过滤首页推荐和热门的内容（重启两次生效）</string>
    <string name="search_area_movie_title">开启其它地区影剧搜索</string>
    <string name="search_area_movie_summary">在搜索页面添加其它地区影剧搜索结果，需要解析服务器支持</string>
    <string name="force_th_comment_title">强制开启泰区评论弹幕</string>
    <string name="force_th_comment_summary">强制开启串台的泰区评论弹幕（仅调试使用）</string>
    <string name="share_log_title">分享日志</string>
    <string name="share_log_summary">可能在旧版无效</string>
    <string name="replace_story_video_title">替换竖版视频</string>
    <string name="replace_story_video_summary">替换竖版视频为正常视频</string>
    <string name="customize_drawer_title">自定义我的页面</string>
    <string name="customize_drawer_summary">自定义【我的】页面（重启后生效）</string>
    <string name="purify_drawer_reddot_title">净化我的页面红点</string>
    <string name="purify_drawer_reddot_summary">净化【我的】页面下方项目红点</string>
    <string name="drawer_style_switch_title">修改我的页面样式开关</string>
    <string name="drawer_style_switch_summary">修改【我的】页面样式</string>
    <string name="drawer_style_title">修改我的页面样式</string>
    <string name="drawer_style_summary">开启改为列表，关闭改为按钮</string>
    <string name="purify_share_title">净化分享</string>
    <string name="purify_share_summary">把分享链接中的短链接换成正常链接</string>
    <string name="custom_link_title">开启自定义链接</string>
    <string name="custom_link_summary">仅支持 bilibili:// 开头的格式</string>
    <string name="add_custom_button_title">在【我的】页面添加自定义按钮</string>
    <string name="add_custom_button_summary">指定修改其中一个项目</string>
    <string name="add_korea_title">添加其他地区韩综</string>
    <string name="add_korea_summary">在首页标签添加港澳台韩综分页</string>
    <string name="fix_space_title">修复UP主空间</string>
    <string name="fix_space_summary">修复部分被屏蔽的UP主空间</string>
    <string name="play_arc_conf_title">解除播放限制</string>
    <string name="play_arc_conf_summary">解除部分版权视频禁止后台播放、小窗播放、投屏、听视频等限制</string>
    <string name="customize_dynamic_title">净化动态</string>
    <string name="customize_dynamic_summary">支持移除同城及校园标签，支持移除话题及最常访问，支持按类型和关键词过滤动态</string>
    <string name="remove_video_relate_promote_title">移除视频下方的相关推广</string>
    <string name="remove_video_relate_promote_summary">移除视频下方的相关推广，例如游戏、课程、会员购、创作推广等</string>
    <string name="remove_video_relate_only_av_title">仅展示UP主投稿视频</string>
    <string name="remove_video_relate_only_av_summary">上个选项的基础上，仅展示UP主投稿视频，移除番剧等内容</string>
    <string name="remove_video_honor_title">移除视频下方的获得荣誉</string>
    <string name="remove_video_honor_summary">移除视频下方的荣誉信息，例如入站必刷、每周必看、全站排行榜、4K频道精选等</string>
    <string name="remove_video_UgcSeason_title">移除视频下方的分集列表</string>
    <string name="remove_video_UgcSeason_summary">移除视频下方的UP主视频分集列表</string>
    <string name="remove_video_relate_nothing_title">移除视频下方的所有内容</string>
    <string name="remove_video_relate_nothing_summary">上个选项的基础上，将UP主投稿视频也移除</string>
    <string name="remove_video_cmd_dms_title">移除视频浮窗</string>
    <string name="remove_video_cmd_dms_summary">移除视频播放时出现的浮窗，包括三连关注、关联视频、投票弹幕、评分弹幕、投资当前UP主、跳转其他应用、免流引导等</string>
    <string name="block_word_search_title">屏蔽评论关键词搜索功能</string>
    <string name="block_word_search_summary">屏蔽视频评论蓝色关键词点击触发跳转搜索功能</string>
    <string name="disable_try_watch_vip_quality_title">禁用免费试看大会员清晰度</string>
    <string name="disable_try_watch_vip_quality_desc">鼠鼠我呀，真的不想每30天点一次不再试看呢</string>
    <string name="force_browser_title">在外部浏览器打开链接</string>
    <string name="force_browser_summary">而不是使用内置浏览器</string>
    <string name="block_up_rcmd_ads_title">屏蔽UP主推荐广告</string>
    <string name="block_up_rcmd_ads_summary">屏蔽视频播放过程中，浮窗出现的UP主推荐广告</string>
    <string name="block_view_page_ads_title">屏蔽视频详情页面广告</string>
    <string name="block_view_page_ads_summary">屏蔽视频（含番剧，普通视频等）详情页面的广告，包括但不限于弹窗广告，会员购等活动广告（旧版本仅对番剧详情页面生效）。</string>
    <string name="block_live_order_title">屏蔽直播预约</string>
    <string name="block_live_order_summary">屏蔽视频详情页面的直播预约信息</string>
    <string name="remove_up_vip_label_title">移除 UP 大会员标识</string>
    <string name="remove_up_vip_label_summary">移除视频详情页 UP 名字旁出现的的大会员标识</string>
    <string name="generate_subtitle_title">生成简中字幕</string>
    <string name="generate_subtitle_summary">根据繁体字幕自动生成简体中文字幕</string>
    <string name="forbid_switch_live_room_title">禁止滑动切换直播间</string>
    <string name="forbid_switch_live_room_summary">禁止上下滑动切换直播间</string>
    <string name="forbid_player_long_click_accelerate_title">禁用播放器长按加速</string>
    <string name="forbid_player_long_click_accelerate_summary">禁用播放器长按开启倍速播放的功能</string>
    <string name="purify_live_popups_title">净化直播间浮窗</string>
    <string name="purify_live_popups_summary">净化直播间各种浮窗</string>
    <string name="disable_live_room_double_click_title">禁用直播间双击点赞</string>
    <string name="disable_live_room_double_click_summary">将直播间双击点赞行为更换为暂停/播放</string>
    <string name="block_modules_title">禁止下载 App 基础组件库</string>
    <string name="block_modules_summary">在清理存储空间中清理 App 基础组件库后不再下载，能节省存储空间，但会影响部分功能。</string>
    <string name="block_update_title">禁止 App 检查更新</string>
    <string name="remove_vip_section_title">移除我的大会员横幅</string>
    <string name="remove_vip_section_summary">我的页面将大会员横幅移除</string>
    <string name="save_comment_image_title">笔记图片长按预览保存</string>
    <string name="save_comment_image_summary">视频笔记图片点开后长按预览图片保存到本地</string>
    <string name="force_upos_title">应用 UPOS 服务器到所有视频</string>
    <string name="force_upos_summary">【非必要不开启】含普通视频、番剧、电影等。特殊网络环境视频加载缓慢，可尝试开启</string>
    <string name="block_pcdn_title">阻止视频通过 PCDN 加载</string>
    <string name="block_pcdn_summary">【非必要不开启】可一定程度上优化视频加载速度，以实际情况为准</string>
    <string name="block_pcdn_live_title">阻止直播通过 PCDN 加载</string>
    <string name="block_pcdn_live_summary">【非必要不开启】避免占用大量上传带宽，同时可一定程度上优化直播加载速度，以实际情况为准</string>
    <string name="danmaku_filter_title">弹幕屏蔽等级</string>
    <string name="danmaku_filter_summary">恢复旧版按等级屏蔽弹幕功能，0级表示关闭本功能</string>
    <string name="half_screen_quality_title">视频半屏清晰度</string>
    <string name="half_screen_quality_summary">设置视频半屏播放时的清晰度，设置后会大幅降低视频的首次播放加载速度，旧版播放器（半屏时进度条在框内）仅支持跟随全屏清晰度，需开启解锁番剧限制选项</string>
    <string name="full_screen_quality_title">视频全屏清晰度</string>
    <string name="full_screen_quality_summary">设置视频全屏播放时默认的清晰度，当播放器画质选项为自动时此选项不生效，需开启解锁番剧限制选项</string>
    <string name="live_quality_title">直播清晰度</string>
    <string name="live_quality_summary">设置进入直播间的默认清晰度，若不存在指定清晰度，则会取最接近的清晰度</string>
    <string name="block_comment_guide_title">屏蔽评论引导</string>
    <string name="block_comment_guide_summary">屏蔽视频详情页及评论页的评论引导提示</string>
    <string name="disable_auto_refresh_title">禁止首页自动刷新</string>
    <string name="disable_auto_refresh_summary">禁止首页内容在退至后台、切换其他页面一段时间后返回或热重启时自动刷新</string>
    <string name="disable_vip_dm_colorful_title">过滤渐变色弹幕</string>
    <string name="disable_vip_dm_colorful_summary">渐变色（非普通彩色）弹幕显示为白色</string>
    <string name="block_video_comment_title">屏蔽视频评论区</string>
    <string name="default_speed_summary">设置视频播放默认速度，视频播放后可手动覆盖该速度</string>
    <string name="default_speed_title">视频默认播放速度</string>
    <string name="filter_search_title">过滤搜索</string>
    <string name="filter_search_summary">按内容过滤搜索结果</string>
    <string name="filter_comment_title">过滤评论</string>
    <string name="filter_comment_summary">按内容过滤评论</string>
    <string name="pegasus_cover_ratio_title">推荐封面比例</string>
    <string name="pegasus_cover_ratio_summary">自定义首页推荐小卡（双列显示的）封面比例</string>
    <string name="fake_non_multiwindow_title">伪装处于非多窗口模式</string>
    <string name="fake_non_multiwindow_summary">比如视频多窗口模式下全屏</string>
    <string name="copy_access_key_title">复制 access_key</string>
    <string name="copy_access_key_summary">请勿泄露给他人</string>
    <string name="no_live_mask_title">隐藏直播模糊遮罩</string>
    <string name="no_live_mask_summary">隐藏部分直播的模糊遮罩</string>
    <string name="skip_reward_ad_title">跳过视频激励广告</string>
    <string name="skip_reward_ad_summary">有了这个，终于能过第二关了😋（需重启两次哔哩哔哩）</string>
    <string name="purify_story_video_ad_title">净化竖屏模式广告/推广</string>
    <string name="purify_story_video_ad_summary">有了这个，连第一关都看不到了😭</string>
    <string name="long_press_speed">长按播放速度设置</string>
</resources>