<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<!-- 隐藏功能 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="back_to_main" android:title="@string/back_to_main" />
    <PreferenceCategory
        android:key="hidden_group"
        android:title="@string/hidden_group">

        <SwitchPreference
            android:defaultValue="false"
            android:key="hidden"
            android:summary="@string/hidden_summary"
            android:title="@string/hidden_title" />
        <Preference
            android:dependency="hidden"
            android:key="home_filter"
            android:summary="@string/home_filter_summary"
            android:title="@string/home_filter_title" />
        <Preference
            android:dependency="hidden"
            android:key="customize_bottom_bar"
            android:summary="@string/customize_bottom_bar_summary"
            android:title="@string/customize_bottom_bar_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="skip_reward_ad"
            android:summary="@string/skip_reward_ad_summary"
            android:title="@string/skip_reward_ad_title" />
        <Preference
            android:dependency="hidden"
            android:key="purify_story_video_ad"
            android:summary="@string/purify_story_video_ad_summary"
            android:title="@string/purify_story_video_ad_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="purify_game"
            android:summary="@string/purify_game_summary"
            android:title="@string/purify_game_title" />
        <Preference
            android:dependency="hidden"
            android:key="customize_drawer"
            android:summary="@string/customize_drawer_summary"
            android:title="@string/customize_drawer_title" />
        <SwitchPreference
            android:key="add_custom_button"
            android:summary="@string/add_custom_button_summary"
            android:title="@string/add_custom_button_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="purify_drawer_reddot"
            android:summary="@string/purify_drawer_reddot_summary"
            android:title="@string/purify_drawer_reddot_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="drawer_style_switch"
            android:summary="@string/drawer_style_switch_summary"
            android:title="@string/drawer_style_switch_title" />
        <SwitchPreference
            android:dependency="drawer_style_switch"
            android:key="drawer_style"
            android:summary="@string/drawer_style_summary"
            android:title="@string/drawer_style_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="purify_splash"
            android:summary="@string/purify_splash_summary"
            android:title="@string/purify_splash_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="purify_search"
            android:summary="@string/purify_search_summary"
            android:title="@string/purify_search_title" />
        <Preference
            android:dependency="hidden"
            android:key="filter_search"
            android:summary="@string/filter_search_summary"
            android:title="@string/filter_search_title" />
        <Preference
            android:dependency="hidden"
            android:key="filter_comment"
            android:summary="@string/filter_comment_summary"
            android:title="@string/filter_comment_title" />
        <MultiSelectListPreference
            android:dependency="hidden"
            android:entries="@array/tab_entries"
            android:entryValues="@array/tab_values"
            android:key="customize_home_tab"
            android:summary="@string/customize_home_tab_summary"
            android:title="@string/customize_home_tab_title" />
        <MultiSelectListPreference
            android:dependency="hidden"
            android:entries="@array/home_recommend_entries"
            android:entryValues="@array/home_recommend_values"
            android:key="customize_home_recommend"
            android:summary="@string/customize_home_recommend_summary"
            android:title="@string/customize_home_recommend_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="add_bangumi"
            android:summary="@string/add_bangumi_summary"
            android:title="@string/add_bangumi_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="add_movie"
            android:summary="@string/add_movie_summary"
            android:title="@string/add_movie_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="add_korea"
            android:summary="@string/add_korea_summary"
            android:title="@string/add_korea_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="search_area_bangumi"
            android:summary="@string/search_area_summary"
            android:title="@string/search_area_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="search_area_movie"
            android:summary="@string/search_area_movie_summary"
            android:title="@string/search_area_movie_title" />
        <Preference
            android:dependency="hidden"
            android:key="customize_accessKey"
            android:summary="@string/customize_accessKey_summary"
            android:title="@string/customize_accessKey_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="force_th_comment"
            android:summary="@string/force_th_comment_summary"
            android:title="@string/force_th_comment_title" />
        <Preference
            android:dependency="hidden"
            android:key="export_video"
            android:summary="@string/export_video_summary"
            android:title="@string/export_video_title" />
        <MultiSelectListPreference
            android:dependency="hidden"
            android:entries="@array/space_entries"
            android:entryValues="@array/space_values"
            android:key="customize_space"
            android:summary="@string/customize_space_summary"
            android:title="@string/customize_space_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="block_upper_recommend_ad"
            android:summary="@string/block_video_ad_summary"
            android:title="@string/block_video_ad_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="disable_try_watch_vip_quality"
            android:summary="@string/disable_try_watch_vip_quality_desc"
            android:title="@string/disable_try_watch_vip_quality_title" />
        <Preference
            android:dependency="hidden"
            android:key="customize_dynamic"
            android:summary="@string/customize_dynamic_summary"
            android:title="@string/customize_dynamic_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="remove_video_relate_promote"
            android:summary="@string/remove_video_relate_promote_summary"
            android:title="@string/remove_video_relate_promote_title" />
        <SwitchPreference
            android:dependency="remove_video_relate_promote"
            android:key="remove_video_relate_only_av"
            android:summary="@string/remove_video_relate_only_av_summary"
            android:title="@string/remove_video_relate_only_av_title" />
        <SwitchPreference
            android:dependency="remove_video_relate_only_av"
            android:key="remove_video_relate_nothing"
            android:summary="@string/remove_video_relate_nothing_summary"
            android:title="@string/remove_video_relate_nothing_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="remove_video_UgcSeason"
            android:summary="@string/remove_video_UgcSeason_summary"
            android:title="@string/remove_video_UgcSeason_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="remove_video_honor"
            android:summary="@string/remove_video_honor_summary"
            android:title="@string/remove_video_honor_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="remove_video_cmd_dms"
            android:summary="@string/remove_video_cmd_dms_summary"
            android:title="@string/remove_video_cmd_dms_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="block_word_search"
            android:summary="@string/block_word_search_summary"
            android:title="@string/block_word_search_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="block_up_rcmd_ads"
            android:summary="@string/block_up_rcmd_ads_summary"
            android:title="@string/block_up_rcmd_ads_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="block_view_page_ads"
            android:summary="@string/block_view_page_ads_summary"
            android:title="@string/block_view_page_ads_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="block_live_order"
            android:summary="@string/block_live_order_summary"
            android:title="@string/block_live_order_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="remove_up_vip_label"
            android:summary="@string/remove_up_vip_label_summary"
            android:title="@string/remove_up_vip_label_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="no_live_mask"
            android:summary="@string/no_live_mask_summary"
            android:title="@string/no_live_mask_title" />
        <MultiSelectListPreference
            android:dependency="hidden"
            android:entries="@array/live_popup_entries"
            android:entryValues="@array/live_popup_values"
            android:key="purify_live_popups"
            android:summary="@string/purify_live_popups_summary"
            android:title="@string/purify_live_popups_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="block_modules"
            android:summary="@string/block_modules_summary"
            android:title="@string/block_modules_title" />
        <SwitchPreference
            android:key="remove_vip_section"
            android:summary="@string/remove_vip_section_summary"
            android:title="@string/remove_vip_section_title" />
        <SwitchPreference
            android:dependency="hidden"
            android:key="block_video_comment"
            android:title="@string/block_video_comment_title" />

        <Preference
            android:key="copy_access_key"
            android:summary="@string/copy_access_key_summary"
            android:title="@string/copy_access_key_title" />

        <SwitchPreference
            android:dependency="hidden"
            android:key="auto_receive_coupon"
            android:summary="@string/auto_receive_coupon_summary"
            android:title="@string/auto_receive_coupon_title" />
    </PreferenceCategory>
</PreferenceScreen>