<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<!-- 设置分类 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="back_to_main" android:title="@string/back_to_main" />
    <PreferenceCategory android:title="@string/setting_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_info"
            android:summary="@string/show_info_summary"
            android:title="@string/show_info_title" />

        <SwitchPreference
            android:key="save_log"
            android:title="@string/save_log_title" />

        <Preference
            android:key="share_log"
            android:summary="@string/share_log_summary"
            android:title="@string/share_log_title" />
    </PreferenceCategory>
</PreferenceScreen>