<?xml version="1.0" encoding="utf-8"?>
<!-- 主功能设置 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 解锁番剧限制 -->
    <Preference
        android:key="main_category"
        android:summary="@string/main_category"
        android:title="@string/main_category" />

    <!-- 加速CDN设置 -->
    <Preference
        android:key="cdn_category"
        android:summary="@string/cdn_category"
        android:title="@string/cdn_category" />

    <!-- 美化设置 -->
    <Preference
        android:key="beautify_category"
        android:summary="@string/beautify_category"
        android:title="@string/beautify_category" />

    <!-- 杂项设置 -->
    <Preference
        android:key="miscellaneous_category"
        android:summary="@string/miscellaneous_category"
        android:title="@string/miscellaneous_category" />

    <!-- 配置备份 -->
    <Preference
        android:key="pref_backup"
        android:summary="@string/pref_backup"
        android:title="@string/pref_backup" />

    <!-- 隐藏功能 -->
    <Preference
        android:key="hidden_group"
        android:summary="@string/hidden_group"
        android:title="@string/hidden_group" />

    <!-- 设置分类 -->
    <Preference
        android:key="setting_category"
        android:summary="@string/setting_category"
        android:title="@string/setting_category" />

    <!-- 关于 -->
    <Preference
        android:key="about"
        android:summary="@string/about"
        android:title="@string/about" />
</PreferenceScreen>